# xf_paged_attention

./: CMakeLists.txt  paged_attn.cpp
csrc/attention/: attention_kernels.cpp  attention_utils.cuh  dtype_float16.cuh
